Fix safari input bug. Make body y overflow to scroll.

--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -6,7 +6,7 @@
     width: 100%;
     height: 100%;
     background-color: white;
-    padding: 20px;
+    padding: 10px 20px;
     position: relative;
 }
 #top-options-bar {
@@ -33,6 +33,8 @@
     margin: 0 20px 0 0;
     line-height: 1.2;
     max-width: 140px;
+    font-size: 0.8em;
+    padding: 5px 15px;
 }
 @media screen and (min-width: 600px) {
     #top-options-bar .btn {
@@ -68,6 +70,8 @@
 #messages {
     height: 60vh;
     max-height: 60vh;
+    max-width: 800px;
+    margin: 10px auto;
     overflow-y: scroll;
     overflow-wrap: break-word;
     overflow-x: hidden;
@@ -93,6 +97,8 @@
 }
 
 form#messageForm {
+    max-width: 700px;
+    margin: 10px auto;
     padding: 8px 0;
     display: -webkit-box;
     display: -moz-box;
