--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,6 +1,5 @@
 body {
     background-color: #90a4ae;
-    overflow-y: hidden;
 }
 .flex-justify-center {
     justify-content: center;
